feat: post crud (+slop)
